# Faucet-Workspace

./: Cargo.toml  build.rs  data.yaml
resources/: button_form.glade  button_form.glade~  colorblindstyle.css  resources.gresource  resources.xml  style.css
src/: acls.rs  dps_interface.rs  faucet_document.rs  main.rs  meter.rs  router.rs  vlan_route.rs
